tests/Fase2-Semantic/error/t10-two_params_with_same_name.ctds
class main {
	integer x;

	integer add(integer a, bool a){
		x = x+1;
		return x;
	}

	void notmain(){
		x=0;
		add();
	}
	
}
